<resources>
    <string name="app_name">Gudang Bidan</string>
    <string name="title_home">Beranda</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="hint_namaPasien">Ketikkan nama disini</string>
    <string name="hint_tanggal">Ketikkan tanggal lahir disini</string>
    <string name="hint_umur">Ketikkan umur disini</string>
    <string name="text_tambahData">Tambah</string>
    <string name="text_noRegristrasi">No. Reg</string>
    <string name="hint_regristrasi">Ketikkan no. regristasi disini</string>
    <string name="text_nama">Nama</string>
    <string name="text_tanggalLahir">Tanggal Lahir</string>
    <string name="text_umur">Umur</string>
    <string name="text_keluhan">Keluhan</string>
    <string name="hint_keluhan">Ketikkan keluhan disini</string>
    <string name="text_diagnosa">Diagnosa</string>
    <string name="hint_diagnosa">Ketikkan diagnosa disini</string>
    <string name="title_tambahData">Baru</string>
    <string name="title_pasien">Tambah</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="text_simpanData">Simpan</string>
    <string name="text_status">Status</string>
    <string name="title_pengaturan">Pengaturan</string>
    <string name="title_data">Data</string>

    <!-- punya arum
    <string name="idToken">487349850114-b3je2g3k8d5otqk6ae2bj0m3fqqlu019.apps.googleusercontent.com</string>
    -->

    <!-- punya gandung -->
    <string name="idToken">321488850977-c3r1rplougotqgno3tsdb3u4tdm8g1ba.apps.googleusercontent.com</string>
    <string name="text_tanggalPeriksa">Ketikkan tanggal periksa disini</string>
    <string name="tanggal_periksa">Tanggal Periksa</string>
    <string name="text_updateData">Update</string>
    <string name="text_hapus">hapus</string>
    <string name="no_regImunisasi">No. Reg</string>
    <string name="hintRegImunisasi">Ketikkan nomor registrasi disini</string>
    <string name="nama_regImunisasi">Nama Bayi</string>
    <string name="hint_namaImunisasi">Ketikkan nama bayi disini</string>
    <string name="hint_namaBayi">Ketikkan nama bayi disini</string>
    <string name="hint_namaIbu">Ketikkan nama ibu disini</string>
    <string name="hint_tanggalImunisasi">Ketikkan tanggal imunisasi disini</string>
    <string name="hint_namaAyah">Ketikkan nama ayah disini</string>
    <string name="text_bayi">Nama Bayi</string>
    <string name="text_ayah">Nama Ayah</string>
    <string name="text_ibu">Nama Ibu</string>

    <!--jenis imunisasi -->
    <string-array name="imunisasi">
        <item>HB-0 (0-7 hari)</item>
        <item>BCG</item>
        <item>Polio</item>
        <item>DPT-HB-HiB 1</item>
        <item>Polio 2</item>
        <item>DPT-HB-HiB 2</item>
        <item>Polio 3</item>
        <item>DPT-HB-HiB 3</item>
        <item>Polio 4</item>
        <item>IPV</item>
        <item>Campak</item>
    </string-array>

</resources>
