<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".tambahData">

    <!-- TODO: Update blank fragment layout -->

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
       >

        <ScrollView
            android:id="@+id/scrollView2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:id="@+id/linearLayout1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textRegrister"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/text_noRegristrasi"
                    android:textSize="@dimen/text_size2"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/editIdPasien"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/hint_regristrasi"
                    android:inputType="number"
                    android:textSize="@dimen/text_size2" />

                <TextView
                    android:id="@+id/textNama"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/text_nama"
                    android:textSize="@dimen/text_size2"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/editNama"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/hint_namaPasien"
                    android:inputType="textPersonName"
                    android:textSize="@dimen/text_size2" />

                <TextView
                    android:id="@+id/textTanggalLahir"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/text_tanggalLahir"
                    android:textSize="@dimen/text_size2"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/editTanggalLahir"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/hint_tanggal"
                    android:inputType="date"
                    android:textSize="@dimen/text_size2" />

                <TextView
                    android:id="@+id/textUmur"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/text_umur"
                    android:textSize="@dimen/text_size2"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/editUmur"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/hint_umur"
                    android:inputType="number"
                    android:textSize="@dimen/text_size2" />

                <TextView
                    android:id="@+id/textKeluhan"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/text_keluhan"
                    android:textSize="@dimen/text_size2"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/editKeluhan"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/hint_keluhan"
                    android:inputType="textMultiLine|text"
                    android:textSize="@dimen/text_size2" />

                <TextView
                    android:id="@+id/textDiagnosa"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/text_diagnosa"
                    android:textSize="@dimen/text_size"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/editDiagnosa"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/hint_diagnosa"
                    android:inputType="textMultiLine|text"
                    android:textSize="@dimen/text_size2" />

                <Button
                    android:id="@+id/btnSubmitPasien"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="23dp"
                    android:layout_marginBottom="237dp"
                    android:background="@color/colorPrimaryDark"
                    android:text="@string/text_tambahData"
                    android:textColor="@color/textColor_button"
                    android:textSize="@dimen/text_size2"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.498"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/editDiagnosa"
                    app:layout_constraintVertical_bias="0.0" />

            </LinearLayout>
        </ScrollView>

    </android.support.constraint.ConstraintLayout>

</FrameLayout>