<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".updateData">

    <!-- TODO: Update blank fragment layout -->

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ScrollView
            android:id="@+id/scrollView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <SearchView
                    android:id="@+id/cari"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/textRegrister"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="@dimen/padding_atas"
                    android:text="@string/text_noRegristrasi"
                    android:textSize="@dimen/text_size2"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/TampilIdPasien"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:paddingLeft="@dimen/padding_kiri" />

                <TextView
                    android:id="@+id/textNama"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/text_nama"
                    android:textSize="@dimen/text_size2"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/TampilNama"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:paddingLeft="@dimen/padding_kiri" />

                <TextView
                    android:id="@+id/textTanggalLahir"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/text_tanggalLahir"
                    android:textSize="@dimen/text_size2"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/TampilTanggalLahir"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:paddingLeft="@dimen/padding_kiri"
                    android:textSize="@dimen/text_size2" />

                <TextView
                    android:id="@+id/textUmur"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/text_umur"
                    android:textSize="@dimen/text_size2"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/editUmur"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:paddingLeft="@dimen/padding_kiri" />

                <TextView
                    android:id="@+id/textKeluhan"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/text_keluhan"
                    android:textSize="@dimen/text_size2"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/editKeluhan"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/hint_keluhan"
                    android:inputType="textMultiLine|text"
                    android:paddingLeft="@dimen/padding_kiri"
                    android:textSize="@dimen/text_size2" />

                <TextView
                    android:id="@+id/textDiagnosa"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/text_diagnosa"
                    android:textSize="@dimen/text_size2"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/editDiagnosa"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/hint_diagnosa"
                    android:inputType="textMultiLine|text"
                    android:textSize="@dimen/text_size2" />

                <Button
                    android:id="@+id/btnSubmitPasien"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="23dp"
                    android:layout_marginBottom="237dp"
                    android:background="@color/colorPrimaryDark"
                    android:text="@string/text_tambahData"
                    android:textColor="@color/textColor_button"
                    android:textSize="@dimen/text_size2"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.498"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/editDiagnosa"
                    app:layout_constraintVertical_bias="0.0"  />


            </LinearLayout>
        </ScrollView>
    </android.support.constraint.ConstraintLayout>

</FrameLayout>