<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/frameLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".updateImunisasi"
        android:background="@color/colorPrimary">

        <!-- TODO: Update blank fragment layout -->


        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="30dp"
            >

            <ScrollView
                android:id="@+id/scrollView2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingBottom="50dp">

                <LinearLayout
                    android:id="@+id/linearLayout1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:background="@color/putih"
                    android:padding="15dp"
                    >

                    <TextView
                        android:id="@+id/textRegImunisasi"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/no_regImunisasi"
                        android:textSize="@dimen/text_size2"
                        android:textStyle="bold" />

                    <EditText
                        android:id="@+id/editIdBayi"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:hint="@string/hintRegImunisasi"
                        android:inputType="number"
                        android:textSize="@dimen/text_size2" />


                    <TextView
                        android:id="@+id/textTanggalImunisasi"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Tanggal Imunisasi"
                        android:textSize="@dimen/text_size2"
                        android:textStyle="bold" />

                    <EditText
                        android:id="@+id/editTanggalImunisasi"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:clickable="true"
                        android:editable="false"
                        android:ems="10"
                        android:focusable="false"
                        android:hint="@string/hint_tanggalImunisasi"
                        android:inputType="none"
                        android:textSize="@dimen/text_size2" />


                    <TextView
                        android:id="@+id/textJenisImunisasi"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Jenis Imunisasi"
                        android:textSize="@dimen/text_size"
                        android:textStyle="bold" />

                    <Spinner
                        android:id="@+id/jenis"
                        android:padding="7dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:entries="@array/imunisasi"/>
                    <Button
                        android:id="@+id/btnSubmitBayi"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="23dp"
                        android:background="@color/colorPrimaryDark"
                        android:text="@string/text_tambahData"
                        android:textColor="@color/textColor_button"
                        android:textSize="@dimen/text_size2"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.498"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintVertical_bias="0.0" />

                </LinearLayout>
            </ScrollView>

        </android.support.constraint.ConstraintLayout>


</FrameLayout>